<resources>
    <string name="app_name">KnitKnackApp</string>
    <string name="action_settings">Settings</string>
    <string name ="title">KnitKnack</string>
    <string name="new_project">Create New Project</string>
    <string name="enter_project">Enter project name...</string>
    <string name="craft_knit">Knit</string>
    <string name="craft_crochet">Crochet</string>
    <string name="start_date_hint">Enter start date... mm/dd/yyyy</string>
    <string name="current_project_titlebar">Current Project</string>
    <string name="project_name">Project Name:</string>
    <string name="start_date">Start Date:</string>
    <string name="new_counter">Add counter...</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="counter">0</string>
    <string name="project">unamed_project</string>
    <string name="counter_name">unnamed_counter</string>
    <string name="add_counter">+</string>
</resources>
